<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/bg2208"
    tools:context="com.marikyan.empatikainfoapp.AboutActivity">


    <com.pkmmte.view.CircularImageView
        android:id="@+id/ivCompanyLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        app:border="true"
        app:border_color="#EEEEEE"
        app:border_width="4dp"
        app:shadow="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textColor="#EEEEEE"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:id="@+id/textView_companyName"
        android:layout_below="@+id/ivCompanyLogo"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_companyName"
        android:text="@string/company_info"
        android:textSize="14sp"
        android:gravity="start"
        android:id="@+id/textView_info"
        android:typeface="sans"
        android:layout_centerHorizontal="true"
        android:textColor="#EEEEEE"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/copyright"
        android:textColor="#EEEEEE"
        android:textSize="14sp"
        android:gravity="bottom|center_horizontal"
        android:id="@+id/textView_copyright"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/callUsButton"
        android:layout_width="255dp"
        android:layout_height="35dp"
        android:background="@drawable/call_us_button"
        android:layout_marginBottom="20dp"
        android:text="@string/call_us"
        android:textColor="#EEEEEE"
        android:layout_centerHorizontal="true"
        android:textSize="14sp"
        android:layout_alignParentBottom="false"
        android:layout_above="@+id/writeUsButton"
        android:onClick="buttonCallClick"/>
    <Button
        android:id="@+id/writeUsButton"
        android:layout_width="255dp"
        android:layout_height="35dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/write_us_button"
        android:text="@string/write_us"
        android:textColor="#EEEEEE"
        android:textSize="14sp"
        android:layout_above="@+id/textView_copyright"
        android:onClick="buttonSendClick"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
